Revert "rename block"
This reverts commit c2411d7a8c6a016e39b4eccda329913c1756b7c8.

--- a/contact-host.html
+++ b/contact-host.html
@@ -223,7 +223,7 @@
                               <main id="site-content">
                                 <form>
                                   <div>
-                                    <div class="block">
+                                    <div class="_1ynbv25">
                                       <div class="c1yo0219 dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
