--- a/products.html
+++ b/products.html
@@ -216,7 +216,7 @@
                               <div class="_siy8gh"></div>
                               <main id="site-content">
                                 <div class="cgx2eil dir dir-ltr">
-                                  <div class="block">
+                                  <div class="_1ynbv25">
                                     <div class="c1yo0219 dir dir-ltr" style="">
                                       <div
                                         style="--gp-section-max-width: 1120px"
@@ -349,7 +349,7 @@
                                           data-plugin-in-point-id="HERO_DEFAULT"
                                           data-section-id="HERO_DEFAULT"
                                         >
-                                          <div class="block">
+                                          <div class="_1ynbv25">
                                             <div class="image-container">
                                               <ul
                                                 class="_rxz20bq hide-scrollbar"
@@ -1537,7 +1537,7 @@
                                             >
                                               <section>
                                                 <div>
-                                                  <div class="block">
+                                                  <div class="_1ynbv25">
                                                     <div class="d-flex">
                                                       <div class="_tqmy57">
                                                         <div class="_kh3xmo">
@@ -5546,7 +5546,7 @@
                                                     </h2></span
                                                   >
                                                 </div>
-                                                <div class="block">
+                                                <div class="_1ynbv25">
                                                   <div
                                                     class="c53epf4 dir dir-ltr"
                                                   >
@@ -6371,7 +6371,7 @@
                                                         --dls-baseColumn-leadingOffset-xl: 0;
                                                       "
                                                     >
-                                                      <div class="block">
+                                                      <div class="_1ynbv25">
                                                         <ul
                                                           class="tq6hspd h1aqtv1m dir dir-ltr"
                                                         >
@@ -6666,7 +6666,7 @@
                                               data-section-id="POLICIES_DEFAULT"
                                               style="padding-top: 24px"
                                             >
-                                              <div class="block">
+                                              <div class="_1ynbv25">
                                                 <button
                                                   type="button"
                                                   class="link"
@@ -7052,11 +7052,11 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="block"></div>
-                                  <div class="block"></div>
-                                  <div class="block"></div>
-                                  <div class="block"></div>
-                                  <div class="block"></div>
+                                  <div class="_1ynbv25"></div>
+                                  <div class="_1ynbv25"></div>
+                                  <div class="_1ynbv25"></div>
+                                  <div class="_1ynbv25"></div>
+                                  <div class="_1ynbv25"></div>
                                 </div>
                               </main>
                             </div>
