--- a/resources.html
+++ b/resources.html
@@ -405,7 +405,7 @@
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <div class="block">
+                                  <div class="_1ynbv25">
                                     <span
                                       class="_y9cbsa"
                                       style="
@@ -432,7 +432,7 @@
                                 </h1>
                               </div>
                               <div class="_1i6nsdp">
-                                <div class="block">
+                                <div class="_1ynbv25">
                                   <span
                                     class="_y9cbsa"
                                     style="
@@ -488,7 +488,7 @@
                                               href="/resources/hosting-experiences/a/the-3-pillars-of-a-quality-experience-387"
                                               class="_11eqlma4"
                                               ><div class="_e296pg">
-                                                <div class="block">
+                                                <div class="_1ynbv25">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -589,7 +589,7 @@
                                               href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
                                               class="_11eqlma4"
                                               ><div class="_e296pg">
-                                                <div class="block">
+                                                <div class="_1ynbv25">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -691,7 +691,7 @@
                                               href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                               class="_11eqlma4"
                                               ><div class="_e296pg">
-                                                <div class="block">
+                                                <div class="_1ynbv25">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -792,7 +792,7 @@
                                               href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
                                               class="_11eqlma4"
                                               ><div class="_e296pg">
-                                                <div class="block">
+                                                <div class="_1ynbv25">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -893,7 +893,7 @@
                                               href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                               class="_11eqlma4"
                                               ><div class="_e296pg">
-                                                <div class="block">
+                                                <div class="_1ynbv25">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -994,7 +994,7 @@
                                               href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                               class="_11eqlma4"
                                               ><div class="_e296pg">
-                                                <div class="block">
+                                                <div class="_1ynbv25">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
