--- a/transaction_history.html
+++ b/transaction_history.html
@@ -111,7 +111,7 @@
                                               ></path>
                                             </svg>
                                           </div>
-                                          <div class="block">
+                                          <div class="_tgtm1b">
                                             <svg
                                               width="30"
                                               height="32"
