--- a/account-notifications.html
+++ b/account-notifications.html
@@ -212,8 +212,8 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
-                        <div class="block">
-                          <div class="block">
+                        <div class="_1ynbv25">
+                          <div class="_1ynbv25">
                             <div class="_k4m5s3s">
                               <div class="_2b0qwl">
                                 <div class="_1o4zwko" role="presentation">
@@ -653,7 +653,7 @@
                                       </div>
                                       <hr class="_19mw6to" />
                                       <div class="_e296pg">
-                                        <div class="block">
+                                        <div class="_1ynbv25">
                                           <div
                                             id="undefinedEMAIL"
                                             aria-disabled="false"
