--- a/account-settings.html
+++ b/account-settings.html
@@ -213,7 +213,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
-                        <div class="block">
+                        <div class="_1ynbv25">
                           <div class="c1yo0219 dir dir-ltr">
                             <div style="margin: -16px 0px 0px">
                               <div class="_e296pg">
