--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -212,7 +212,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
-                        <div class="block">
+                        <div class="_1ynbv25">
                           <div class="_s8pn9w">
                             <div class="_2b0qwl">
                               <div class="_1o4zwko" role="presentation">
