--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -71,7 +71,7 @@
               <div class="_gqn5ll" aria-hidden="false">
                 <div class="_1j8ocyu">
                   <div class="_fwc96">
-                    <div class="block d-md-none">
+                    <div class="_1ynbv25 d-md-none">
                       <div class="_muecdg">
                         <button
                           aria-label="Close"
