--- a/profile.html
+++ b/profile.html
@@ -333,7 +333,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
-                        <div class="block">
+                        <div class="_1ynbv25">
                           <div class="_s8pn9w">
                             <div class="_2b0qwl">
                               <div class="_1o4zwko" role="presentation">
@@ -660,7 +660,7 @@
                                               data-veloute="user_profile_edit_button"
                                             >
                                               Edit profile</button
-                                            ><span class="block"
+                                            ><span class="_nx67f0"
                                               ><a
                                                 href="/users/edit-photo"
                                                 class="_1sikdxcl"
@@ -669,7 +669,7 @@
                                             >
                                           </div>
                                         </div>
-                                        <div class="block">
+                                        <div class="_nx67f0">
                                           <div class="_p03egf">
                                             <button
                                               aria-expanded="false"
@@ -1085,7 +1085,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             <div class="_1k2miji"></div>
                                           </div>
                                         </form>
-                                        <div class="block">
+                                        <div class="_nx67f0">
                                           <div class="_149ig5a">
                                             <section>
                                               <div class="_1i6o9hv">
@@ -1812,7 +1812,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         data-veloute="user_profile_edit_button"
                                       >
                                         Edit profile</button
-                                      ><span class="block"
+                                      ><span class="_nx67f0"
                                         ><a
                                           href="/users/edit-photo"
                                           class="_1sikdxcl"
@@ -1822,7 +1822,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </div>
                                   </div>
 
-                                  <div class="block">
+                                  <div class="_nx67f0">
                                     <div class="_p03egf">
                                       <button
                                         aria-expanded="false"
@@ -2214,7 +2214,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <div class="_1k2miji"></div>
                                     </div>
                                   </form>
-                                  <div class="block">
+                                  <div class="_nx67f0">
                                     <div class="_149ig5a">
                                       <section>
                                         <div class="_1i6o9hv">
