--- a/signup_login.html
+++ b/signup_login.html
@@ -158,7 +158,7 @@
                         </div>
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
-                        <div class="block">
+                        <div class="_1ynbv25">
                           <div class="_qrzeuh" role="group">
                             <div data-login-signup class="_1y9y8er">
                               <header
@@ -1410,7 +1410,7 @@
                                   <div class="_1x0diny1">
                                     <div class="_16fq9mb">or</div>
                                   </div>
-                                  <div class="block">
+                                  <div class="_1ynbv25">
                                     <div class="_88sa87">
                                       <div class="_jwti9r">
                                         <form
