Revert "rename inline"
This reverts commit e9450d3d41798441e195d0a0c161b2a6a1a28c93.

--- a/contact-host.html
+++ b/contact-host.html
@@ -789,7 +789,7 @@
                                                     class="link"
                                                   >
                                                     <div class="_3i1l2kz">
-                                                      <span class="inline-block"
+                                                      <span class="_1t3783v"
                                                         >Stays</span
                                                       >
                                                     </div></button
@@ -810,14 +810,14 @@
                                                     class="link"
                                                   >
                                                     <div class="_882esz">
-                                                      <span class="inline-block"
+                                                      <span class="_1t3783v"
                                                         >Experiences</span
                                                       >
                                                     </div>
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="inline-block">
+                                              <div class="_36rlri">
                                                 <a
                                                   href="/s/experiences/online"
                                                   class="link"
