--- a/places.html
+++ b/places.html
@@ -13343,8 +13343,8 @@
                                                 <div class="_1g4tb3x"></div>
                                                 <div class="_klarpw">
                                                   <ul class="_2f5j8p">
-                                                    <li class="inline-block">
-                                                      <div class="inline-block">
+                                                    <li class="_15bwml3">
+                                                      <div class="_15bwml3">
                                                         <div class="_owkz1m">
                                                           19 locals recommend
                                                         </div>
@@ -13570,8 +13570,8 @@
                                                 <div class="_1g4tb3x"></div>
                                                 <div class="_klarpw">
                                                   <ul class="_2f5j8p">
-                                                    <li class="inline-block">
-                                                      <div class="inline-block">
+                                                    <li class="_15bwml3">
+                                                      <div class="_15bwml3">
                                                         <div class="_owkz1m">
                                                           117 locals recommend
                                                         </div>
@@ -13797,8 +13797,8 @@
                                                 <div class="_1g4tb3x"></div>
                                                 <div class="_klarpw">
                                                   <ul class="_2f5j8p">
-                                                    <li class="inline-block">
-                                                      <div class="inline-block">
+                                                    <li class="_15bwml3">
+                                                      <div class="_15bwml3">
                                                         <div class="_owkz1m">
                                                           72 locals recommend
                                                         </div>
@@ -14001,8 +14001,8 @@
                                                 <div class="_1g4tb3x"></div>
                                                 <div class="_klarpw">
                                                   <ul class="_2f5j8p">
-                                                    <li class="inline-block">
-                                                      <div class="inline-block">
+                                                    <li class="_15bwml3">
+                                                      <div class="_15bwml3">
                                                         <div class="_owkz1m">
                                                           57 locals recommend
                                                         </div>
