--- a/preferences.html
+++ b/preferences.html
@@ -1919,7 +1919,7 @@
                                 >
                                   <nav aria-label="Account">
                                     <ol class="_1ckj08w">
-                                      <li class="inline-block">
+                                      <li class="_36rlri">
                                         <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
@@ -1929,9 +1929,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="inline-block">
+                                      <li class="_36rlri">
                                         <div
-                                          class="inline-block"
+                                          class="_36rlri"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
