--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1090,7 +1090,7 @@
                               </div>
                             </div>
                             <div class="_1uhu1ks">
-                              <div class="inline">
+                              <div class="_g86r3e">
                                 <p class="_1mm0shk">
                                   We’re looking for hosts who can also master
                                   the technical aspects of a great online
