--- a/submission/video.html
+++ b/submission/video.html
@@ -1077,7 +1077,7 @@
                                   >
                                 </h2>
                                 <div class="_942b9f">
-                                  <div class="inline">
+                                  <div class="_g86r3e">
                                     <p class="_1mm0shk">
                                       Reference our step-by-step checklist to
                                       plan out your video—it has detailed
@@ -1122,7 +1122,7 @@
                                   >
                                 </h2>
                                 <div class="_942b9f">
-                                  <div class="inline">
+                                  <div class="_g86r3e">
                                     <p class="_1mm0shk">
                                       You can use any program you’d like to
                                       record your video.
