--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1284,7 +1284,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                               <div class="">
                                 <div class="_1xq6rjf">
                                   <div class="_1f785j7">
-                                    <div class="inline">
+                                    <div class="_g86r3e">
                                       Where will you broadcast from?
                                     </div>
                                   </div>
