--- a/calendar.html
+++ b/calendar.html
@@ -195,7 +195,7 @@
                               Today
                             </button>
                           </div>
-                          <div class="inline">
+                          <div class="_1g8cjd8">
                             <button
                               aria-label="Today"
                               type="button"
@@ -293,7 +293,7 @@
                           >
                             <div class="_4mgw92">
                               <div class="_1apusbw">July 1, 2022</div>
-                              <div class="inline">July 2022</div>
+                              <div class="_1g8cjd8">July 2022</div>
                               <span class="_uhxsfg"
                                 ><svg
                                   viewBox="0 0 32 32"
@@ -358,7 +358,7 @@
                             </div>
                           </div>
                           <div class="_c9hv0sy"></div>
-                          <div class="inline">
+                          <div class="_1lwbucx">
                             <button
                               aria-label="Today"
                               type="button"
@@ -455,7 +455,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="inline">
+                                        <div class="_1lwbucx">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -757,7 +757,7 @@
                                       type="button"
                                     >
                                       <div>
-                                        <div class="inline">
+                                        <div class="_1lwbucx">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
