--- a/merchandising.html
+++ b/merchandising.html
@@ -4392,7 +4392,7 @@
                                                                   class="_3i1l2kz"
                                                                 >
                                                                   <span
-                                                                    class="inline-block"
+                                                                    class="_1t3783v"
                                                                     >Stays</span
                                                                   >
                                                                 </div></button
@@ -4419,14 +4419,14 @@
                                                                   class="_882esz"
                                                                 >
                                                                   <span
-                                                                    class="inline-block"
+                                                                    class="_1t3783v"
                                                                     >Experiences</span
                                                                   >
                                                                 </div>
                                                               </button>
                                                             </div>
                                                           </div>
-                                                          <div class="inline-block">
+                                                          <div class="_36rlri">
                                                             <a
                                                               href="/s/experiences/online"
                                                               class="link"
