--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -730,7 +730,7 @@
                                 >
                                   <nav aria-label="Account">
                                     <ol class="_1ckj08w">
-                                      <li class="inline-block">
+                                      <li class="_36rlri">
                                         <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
@@ -740,9 +740,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="inline-block">
+                                      <li class="_36rlri">
                                         <div
-                                          class="inline-block"
+                                          class="_36rlri"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
