--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1087,7 +1087,7 @@
                               </div>
                             </div>
                             <div class="_1uhu1ks">
-                              <div class="inline">
+                              <div class="_g86r3e">
                                 <p class="_1mm0shk">
                                   We’re looking for experiences that don’t
                                   require difficult preparation or special
@@ -1117,7 +1117,7 @@
                                 <div class="_1xq6rjf">
                                   <fieldset class="_25bp3z" role="radiogroup">
                                     <legend class="_1wjt7fx">
-                                      <div class="inline">
+                                      <div class="_g86r3e">
                                         Are you able to share stories or educate
                                         guests about the animals in your
                                         experience?
