--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1090,7 +1090,7 @@
                               </div>
                             </div>
                             <div class="_1uhu1ks">
-                              <div class="inline">
+                              <div class="_g86r3e">
                                 <p class="_1mm0shk">
                                   We’re looking for hosts who can bring the
                                   magic of Airbnb Experiences online, and can
