--- a/submission/participation.html
+++ b/submission/participation.html
@@ -1093,7 +1093,7 @@
                               </div>
                             </div>
                             <div class="_1uhu1ks">
-                              <div class="inline">
+                              <div class="_g86r3e">
                                 <p class="_1mm0shk">
                                   We’re looking for engaging activities that are
                                   designed for “doing” and not just “watching.”
