--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3212,7 +3212,7 @@
                                     </div>
                                     <div class="_1yqloi9">
                                       <div class="_1dmr5la">
-                                        <div class="_g86r3e">
+                                        <div class="inline">
                                           Cooking Deep Fried Bright Orange
                                           Battered Eggs
                                         </div>
@@ -3225,7 +3225,7 @@
                                       <span class="a8jt5op dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
-                                        ><div class="_g86r3e">
+                                        ><div class="inline">
                                           Private group · Not booked yet
                                         </div></span
                                       >
@@ -3291,7 +3291,7 @@
                                     </div>
                                     <div class="_1yqloi9">
                                       <div class="_1dmr5la">
-                                        <div class="_g86r3e">
+                                        <div class="inline">
                                           Cooking Deep Fried Bright Orange
                                           Battered Eggs
                                         </div>
@@ -3304,7 +3304,7 @@
                                       <span class="a8jt5op dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
-                                        ><div class="_g86r3e">
+                                        ><div class="inline">
                                           Private group · Not booked yet
                                         </div></span
                                       >
