--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -514,7 +514,7 @@
                                                 Redeem a gift card and look up
                                                 your credit balance.
                                                 <div
-                                                  class="_g86r3e"
+                                                  class="inline"
                                                   style="margin-left: 8px"
                                                 >
                                                   <a
@@ -1262,7 +1262,7 @@
                                                 Redeem a gift card and look up
                                                 your credit balance.
                                                 <div
-                                                  class="_g86r3e"
+                                                  class="inline"
                                                   style="margin-left: 8px"
                                                 >
                                                   <a
