Revert "rename contents"
This reverts commit 4e615f7f593303bef23f70533baa0a2611d5b84b.

--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1212,9 +1212,9 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered" class="modal__container">
-        <div class="contents">
+        <div class="_z4lmgp">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-          <div class="contents">
+          <div class="_z4lmgp">
             <div
               role="dialog"
               aria-label="Select a theme"
