--- a/profile.html
+++ b/profile.html
@@ -3233,9 +3233,9 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
-          <div class="contents">
+          <div class="_z4lmgp">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="contents">
+            <div class="_z4lmgp">
               <div
                 role="dialog"
                 aria-label="Identity verification"
