--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1061,7 +1061,7 @@
                             <div class="_v08k6k">
                               <div role="radiogroup">
                                 <button
-                                  class="_28hxjy8"
+                                  class="list-group__btn--active"
                                   type="button"
                                   role="radio"
                                   aria-checked="true"
@@ -1074,7 +1074,7 @@
                                 </button>
                                 <div class="_116pv12">
                                   <button
-                                    class="_dkkqb8"
+                                    class="list-group__btn"
                                     type="button"
                                     role="radio"
                                     aria-checked="false"
