--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -167,10 +167,10 @@
                     <div class="_tdjw9nc" style="transition: opacity 0.6s">
                       <div class="_10mqyec">
                         <span style="font-size: 0"></span>
-                        <div class="_15gowa3" role="radiogroup" id="FMP-target">
-                          <div class="_7ievarx" style="animation-delay: 400ms">
+                        <div class="list-group" role="radiogroup" id="FMP-target">
+                          <div class="list-group__item" style="animation-delay: 400ms">
                             <button
-                              class="_dkkqb8"
+                              class="list-group__btn"
                               type="button"
                               role="radio"
                               aria-checked="false"
@@ -217,11 +217,11 @@
                             </button>
                           </div>
                           <div
-                            class="_7ievarx"
+                            class="list-group__item"
                             style="animation-delay: 449.7412007086385ms"
                           >
                             <button
-                              class="_28hxjy8"
+                              class="list-group__btn--active"
                               type="button"
                               role="radio"
                               aria-checked="true"
@@ -268,11 +268,11 @@
                             </button>
                           </div>
                           <div
-                            class="_7ievarx"
+                            class="list-group__item"
                             style="animation-delay: 497.9674649614837ms"
                           >
                             <button
-                              class="_dkkqb8"
+                              class="list-group__btn"
                               type="button"
                               role="radio"
                               aria-checked="false"
@@ -319,11 +319,11 @@
                             </button>
                           </div>
                           <div
-                            class="_7ievarx"
+                            class="list-group__item"
                             style="animation-delay: 543.3429593403143ms"
                           >
                             <button
-                              class="_dkkqb8"
+                              class="list-group__btn"
                               type="button"
                               role="radio"
                               aria-checked="false"
@@ -370,11 +370,11 @@
                             </button>
                           </div>
                           <div
-                            class="_7ievarx"
+                            class="list-group__item"
                             style="animation-delay: 584.846862904004ms"
                           >
                             <button
-                              class="_dkkqb8"
+                              class="list-group__btn"
                               type="button"
                               role="radio"
                               aria-checked="false"
@@ -421,11 +421,11 @@
                             </button>
                           </div>
                           <div
-                            class="_7ievarx"
+                            class="list-group__item"
                             style="animation-delay: 621.8398889397529ms"
                           >
                             <button
-                              class="_dkkqb8"
+                              class="list-group__btn"
                               type="button"
                               role="radio"
                               aria-checked="false"
