--- a/edit/bring.html
+++ b/edit/bring.html
@@ -400,7 +400,7 @@
                                         <div role="radiogroup">
                                           <div class="_6nu6n7">
                                             <button
-                                              class="_28hxjy8"
+                                              class="list-group__btn--active"
                                               type="button"
                                               role="radio"
                                               aria-checked="true"
@@ -414,7 +414,7 @@
                                           </div>
                                           <div class="_6nu6n7">
                                             <button
-                                              class="_dkkqb8"
+                                              class="list-group__btn"
                                               type="button"
                                               role="radio"
                                               aria-checked="false"
