--- a/experienceType.html
+++ b/experienceType.html
@@ -3146,7 +3146,7 @@
                             <div class="_v08k6k">
                               <div role="radiogroup">
                                 <button
-                                  class="_dkkqb8"
+                                  class="list-group__btn"
                                   type="button"
                                   role="radio"
                                   aria-checked="false"
@@ -3182,7 +3182,7 @@
                                 </button>
                                 <div class="_116pv12">
                                   <button
-                                    class="_dkkqb8"
+                                    class="list-group__btn"
                                     type="button"
                                     role="radio"
                                     aria-checked="false"
