reaname form__select

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -1706,7 +1706,7 @@
                                             </div>
                                             <div class="box-border">
                                               <select
-                                                class="_1iwku6d"
+                                                class="form__select"
                                                 id="notification-settings-active-phone-chooser"
                                               >
                                                 <option
