--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4238,7 +4238,7 @@
                                 <div class="box-border">
                                   <select
                                     name="starts_at"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="starts_at"
                                     aria-readonly="false"
                                   >
@@ -4487,7 +4487,7 @@
                                 <div class="box-border">
                                   <select
                                     name="booking_type"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="booking_type"
                                     aria-readonly="false"
                                   >
@@ -4726,7 +4726,7 @@
                                 <div class="box-border">
                                   <select
                                     name="last_booking_lead_minutes"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="last_booking_lead_minutes"
                                     aria-readonly="false"
                                   >
@@ -4831,7 +4831,7 @@
                                 <div class="box-border">
                                   <select
                                     name="first_booking_lead_minutes"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="first_booking_lead_minutes"
                                     aria-readonly="false"
                                   >
@@ -4926,7 +4926,7 @@
                                 <div class="box-border">
                                   <select
                                     name="frequency"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="frequency"
                                     aria-readonly="false"
                                   >
