--- a/personal-info.html
+++ b/personal-info.html
@@ -542,7 +542,7 @@
                                                 name="gender"
                                                 placeholder="Select"
                                                 aria-describedby="gender-input-InputField-help"
-                                                class="_1iwku6d"
+                                                class="form__select"
                                                 id="gender-input"
                                               >
                                                 <option value=""></option>
@@ -1112,7 +1112,7 @@
                                                       <div class="box-border">
                                                         <select
                                                           name="country_code"
-                                                          class="_1iwku6d"
+                                                          class="form__select"
                                                           id="addresscountry_code"
                                                         >
                                                           <option value="AF">
@@ -2345,7 +2345,7 @@
                                                   name="preferred_language"
                                                   placeholder="Select"
                                                   aria-describedby="preferred_language-InputField-help"
-                                                  class="_1iwku6d"
+                                                  class="form__select"
                                                   id="preferred_language"
                                                 >
                                                   <option value=""></option>
@@ -2606,7 +2606,7 @@
                                                       name="phone_country"
                                                       placeholder="Choose..."
                                                       aria-describedby="phone_country-InputField-help"
-                                                      class="_1iwku6d"
+                                                      class="form__select"
                                                       id="phone_country"
                                                     >
                                                       <option value=""></option>
@@ -3951,7 +3951,7 @@
                                                     name="gender"
                                                     placeholder="Select"
                                                     aria-describedby="gender-input-InputField-help"
-                                                    class="_1iwku6d"
+                                                    class="form__select"
                                                     id="gender-input"
                                                   >
                                                     <option value=""></option>
@@ -4543,7 +4543,7 @@
                                                           <div class="box-border">
                                                             <select
                                                               name="country_code"
-                                                              class="_1iwku6d"
+                                                              class="form__select"
                                                               id="addresscountry_code"
                                                             >
                                                               <option
@@ -6325,7 +6325,7 @@
                                                       name="preferred_language"
                                                       placeholder="Select"
                                                       aria-describedby="preferred_language-InputField-help"
-                                                      class="_1iwku6d"
+                                                      class="form__select"
                                                       id="preferred_language"
                                                     >
                                                       <option value=""></option>
@@ -6588,7 +6588,7 @@
                                                           name="phone_country"
                                                           placeholder="Choose..."
                                                           aria-describedby="phone_country-InputField-help"
-                                                          class="_1iwku6d"
+                                                          class="form__select"
                                                           id="phone_country"
                                                         >
                                                           <option
