--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1089,7 +1089,7 @@
                                       <div class="box-border">
                                         <select
                                           name="data-type-picker-Public groups"
-                                          class="_1iwku6d"
+                                          class="form__select"
                                           id="data-type-picker-Public groups"
                                         >
                                           <option value="1">1</option>
@@ -1152,7 +1152,7 @@
                                       <div class="box-border">
                                         <select
                                           name="data-type-picker-Private groups"
-                                          class="_1iwku6d"
+                                          class="form__select"
                                           id="data-type-picker-Private groups"
                                         >
                                           <option value="1">1</option>
