--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1132,7 +1132,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                         <select
                                           name="experience_duration"
                                           aria-describedby="experience_duration-InputField-help"
-                                          class="_1iwku6d"
+                                          class="form__select"
                                           id="experience_duration"
                                         >
                                           <option value="0.5" id="0.5">
