--- a/signup_login.html
+++ b/signup_login.html
@@ -244,7 +244,7 @@
                                                 <div class="box-border">
                                                   <select
                                                     data-testid="login-signup-countrycode"
-                                                    class="_1iwku6d"
+                                                    class="form__select"
                                                     id="country"
                                                   >
                                                     <option value="93AF">
@@ -3298,7 +3298,7 @@
                                               <div class="box-border">
                                                 <select
                                                   data-testid="login-signup-countrycode"
-                                                  class="_1iwku6d"
+                                                  class="form__select"
                                                   id="country"
                                                 >
                                                   <option value="93AF">
